--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>eleme</title>
-    <meta name="author" content="Reddy.Huang"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="static/css/reset.css">
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>eleme</title><meta name=author content=Reddy.Huang><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"><link rel=stylesheet href=dist/static/css/reset.css><link href=dist/static/css/app.a5330da96b06e62afc14acabfd4304ed.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=dist/static/js/manifest.3cc809070101e3dc08a7.js></script><script type=text/javascript src=dist/static/js/vendor.3c31f05e690ece9b0d3d.js></script><script type=text/javascript src=dist/static/js/app.b0a26ffde302d80260b6.js></script></body></html>
